[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/GUI.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/GUIBalance.gd" type="Script" id=2]
[ext_resource path="res://Scripts/GUIButtons.gd" type="Script" id=3]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=4]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.28
margin_top = 12.0136
margin_right = 253.72
margin_bottom = 40.0136
size_flags_horizontal = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ButtonContainer"]
margin_right = 502.0
margin_bottom = 28.0
theme = ExtResource( 1 )

[node name="TopButtons" type="HBoxContainer" parent="ButtonContainer"]
margin_right = 502.0
margin_bottom = 28.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_right = 74.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Territory" type="Button" parent="ButtonContainer/TopButtons/MarginContainer"]
margin_right = 74.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Territory"

[node name="MarginContainer6" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 78.0
margin_right = 140.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Village" type="Button" parent="ButtonContainer/TopButtons/MarginContainer6"]
margin_right = 62.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Village"

[node name="MarginContainer2" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 144.0
margin_right = 224.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Upgrades" type="Button" parent="ButtonContainer/TopButtons/MarginContainer2"]
margin_right = 80.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Upgrades"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer3" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 228.0
margin_right = 340.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ButtonContainer/TopButtons/MarginContainer3"]
margin_right = 112.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Achievements"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer4" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 344.0
margin_right = 395.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ButtonContainer/TopButtons/MarginContainer4"]
margin_right = 51.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Shop"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer5" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 399.0
margin_right = 455.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Menu" type="Button" parent="ButtonContainer/TopButtons/MarginContainer5"]
margin_right = 56.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Menu"
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer7" type="MarginContainer" parent="ButtonContainer/TopButtons"]
margin_left = 459.0
margin_right = 502.0
margin_bottom = 28.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="ButtonContainer/TopButtons/MarginContainer7"]
margin_right = 43.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.509804, 0.509804, 0.509804, 1 )
text = "Exit"
__meta__ = {
"_editor_description_": ""
}

[node name="BalanceContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -581.0
margin_top = -63.0
margin_right = -30.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BalanceContainer"]
margin_right = 551.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BalanceContainer/HBoxContainer"]
margin_right = 167.0
margin_bottom = 47.0
grow_horizontal = 0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel2" type="Panel" parent="BalanceContainer/HBoxContainer/MarginContainer"]
margin_right = 167.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="Money_container" type="HBoxContainer" parent="BalanceContainer/HBoxContainer/MarginContainer"]
margin_left = 71.0
margin_top = 8.0
margin_right = 95.0
margin_bottom = 38.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Money_Amount" type="Label" parent="BalanceContainer/HBoxContainer/MarginContainer/Money_container"]
margin_right = 24.0
margin_bottom = 30.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.223529, 0.14902, 1 )
text = "[x]"
__meta__ = {
"_editor_description_": ""
}

[node name="space2" type="MarginContainer" parent="BalanceContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 187.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.48

[node name="MarginContainer2" type="MarginContainer" parent="BalanceContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 359.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel" type="Panel" parent="BalanceContainer/HBoxContainer/MarginContainer2"]
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Territory_container" type="HBoxContainer" parent="BalanceContainer/HBoxContainer/MarginContainer2"]
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="space3" type="MarginContainer" parent="BalanceContainer/HBoxContainer/MarginContainer2/Territory_container"]
margin_right = 11.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="Territory" type="Label" parent="BalanceContainer/HBoxContainer/MarginContainer2/Territory_container"]
margin_left = 15.0
margin_top = 8.0
margin_right = 34.0
margin_bottom = 38.0
grow_horizontal = 0
size_flags_horizontal = 2
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.223529, 0.14902, 1 )
text = "T:"
__meta__ = {
"_editor_description_": ""
}

[node name="Territory_Amount" type="Label" parent="BalanceContainer/HBoxContainer/MarginContainer2/Territory_container"]
margin_left = 38.0
margin_top = 8.0
margin_right = 152.0
margin_bottom = 38.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.36
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.223529, 0.14902, 1 )
text = "[x]"
percent_visible = -0.333333
__meta__ = {
"_editor_description_": ""
}

[node name="space4" type="MarginContainer" parent="BalanceContainer/HBoxContainer/MarginContainer2/Territory_container"]
margin_left = 156.0
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="space" type="MarginContainer" parent="BalanceContainer/HBoxContainer"]
margin_left = 363.0
margin_right = 379.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.48

[node name="MarginContainer3" type="MarginContainer" parent="BalanceContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 551.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Panel3" type="Panel" parent="BalanceContainer/HBoxContainer/MarginContainer3"]
margin_right = 168.0
margin_bottom = 47.0

[node name="Troop_container" type="HBoxContainer" parent="BalanceContainer/HBoxContainer/MarginContainer3"]
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 5

[node name="Troops" type="Label" parent="BalanceContainer/HBoxContainer/MarginContainer3/Troop_container"]
margin_top = 8.0
margin_right = 82.0
margin_bottom = 38.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.223529, 0.14902, 1 )
text = "Tps:"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Troop_Amount" type="Label" parent="BalanceContainer/HBoxContainer/MarginContainer3/Troop_container"]
margin_left = 86.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 38.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.286275, 0.223529, 0.14902, 1 )
text = "[x]"
align = 1
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="ButtonContainer/TopButtons/MarginContainer/Territory" to="ButtonContainer/TopButtons" method="_on_Territory_pressed"]
[connection signal="pressed" from="ButtonContainer/TopButtons/MarginContainer6/Village" to="ButtonContainer/TopButtons" method="_on_Village_pressed"]
[connection signal="pressed" from="ButtonContainer/TopButtons/MarginContainer2/Upgrades" to="ButtonContainer/TopButtons" method="_on_Upgrades_pressed"]
[connection signal="pressed" from="ButtonContainer/TopButtons/MarginContainer5/Menu" to="ButtonContainer/TopButtons" method="_on_Menu_pressed"]
[connection signal="pressed" from="ButtonContainer/TopButtons/MarginContainer7/Exit" to="ButtonContainer/TopButtons" method="_on_Exit_pressed"]
